k8s/spiced-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: nestjs
  namespace: default
spec:
  selector:
    app: nestjs
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs
  namespace: default
  labels:
    app: nestjs
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nestjs
  template:
    metadata:
      labels:
        app: nestjs
    spec:
      containers:
      - name: nestjs
        image: vasu63devan/nestjs:1.0.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          protocol: TCP
        imagePullPolicy: Always
