k8s/nestjs-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nestjs
  namespace: default
spec:
  gateways:
  - istio-system/default-gateway
  hosts:
  - nestjs.dev.getkarma.live
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nestjs.default.svc.cluster.local
        port:
          number: 8000
